Prevent tags from getting clipped

--- a/webapp/app/components/tag-list/styles.scss
+++ b/webapp/app/components/tag-list/styles.scss
@@ -4,4 +4,8 @@ a:visited,
 a:link,
 a:active {
   text-decoration: none;
+};
+
+.tag {
+  display: inline-block;
 }
